--- a/front/src/assets/css/myStyle.scss
+++ b/front/src/assets/css/myStyle.scss
@@ -246,11 +246,25 @@ select {
 
 .catalog {
   padding: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  &__add-button {
+    margin-bottom: 30px;
+    font-size: 1.5em;
+    color: white;
+    background: $primary-color;
+    border-radius: 10px;
+    width: fit-content;
+    padding: 10px;
+  }
   &__segment {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    margin-bottom: 40px;
   }
   &__segment-title {
     text-align: center;
@@ -287,34 +301,21 @@ select {
     align-items: center;
     margin-top: 15px;
   }
-  &__button-decrease {
-    color: $primary-color;
-    background: $second-back-color;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 30px;
-    margin: 0 5px;
-  }
   &__count {
     margin: 0 5px;
   }
-  &__button-increase {
-    color: $primary-color;
-    background: $second-back-color;
-    width: 30px;
-    height: 30px;
-    line-height: 30px;
-    border-radius: 50%;
-    text-align: center;
-    margin: 0 5px;
-  }
   &__button {
-    border: $border-color solid 1px;
+    background: $second-back-color;
     border-radius: 5px;
     padding: 5px;
     margin: 0 5px;
+    &_selected {
+      background: $primary-color;
+      color: $primary-text-color;
+      &:hover {
+        color: $primary-text-color-hover;
+      }
+    }
   }
 }
 
@@ -360,5 +361,82 @@ select {
     text-wrap: normal;
     word-break: break-all;
     margin-top: 10px;
+  }
+}
+
+.modal-window {
+  position: fixed;
+  width: 100%;
+  height: fit-content;
+  background: rgba($back-color, 0.5);
+  display: grid;
+  place-items: center;
+  &__window {
+    padding: 15px;
+    border-radius: 10px;
+    background: $second-back-color;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  &__close-button {
+    width: 20px;
+    height: 20px;
+    background: url("../svg/cross.svg");
+    align-self: flex-end;
+  }
+}
+
+.product-info {
+  width: 500px;
+  &__title {
+    font-size: 1.5em;
+    margin-bottom: 20px;
+  }
+  &__description {
+    text-align: justify;
+    text-indent: 1.5em;
+  }
+}
+
+.product-edit-form {
+  width: 500px;
+  &__title {
+    font-size: 1.5em;
+    margin-bottom: 20px;
+  }
+  &__label {
+    font-size: 1.2em;
+    margin-bottom: 5px;
+  }
+  &__field {
+    margin-bottom: 10px;
+    padding: 5px;
+    border-radius: 5px;
+    border: none;
+    width: 100%;
+  }
+  &__text-area {
+    margin-bottom: 10px;
+    padding: 5px;
+    border-radius: 5px;
+    border: none;
+    width: 100%;
+    height: 100px;
+    resize: vertical;
+  }
+  &__drop-down {
+    margin-bottom: 10px;
+    padding: 5px;
+    border-radius: 5px;
+    border: none;
+    min-width: 150px;
+  }
+  &__submit {
+    padding: 5px;
+    border-radius: 5px;
+    background: $object-color;
+    border: $border-color solid 1px;
+    margin-top: 20px;
   }
 }
