--- a/front/src/assets/css/variables.scss
+++ b/front/src/assets/css/variables.scss
@@ -1,6 +1,6 @@
 $primary-color: #D46678;
 $primary-text-color: white;
-$primary-text-color-hover: pink;
+$primary-text-color-hover: #ffe4e4;
 $back-color: #fff2ea;
 $second-back-color: #ffe5b4;
 $border-color: slategrey;
