--- a/front/src/assets/css/myStyle.scss
+++ b/front/src/assets/css/myStyle.scss
@@ -45,6 +45,7 @@ input {
   }
   &[type=submit] {
     cursor: pointer;
+    border: none;
   }
 }
 select {
@@ -571,10 +572,124 @@ select {
     text-align: center;
     white-space: nowrap;
     padding: 10px;
-    border-bottom: rgba($primary-color, 0.5) 2px dashed;;
+    border-bottom: rgba($primary-color, 0.5) 2px dashed;
   }
   &__container-content {
     padding: 15px;
+  }
+}
+
+.basket {
+  display: flex;
+  flex-direction: row;
+  padding: 15px;
+  justify-content: center;
+  flex-wrap: wrap;
+  height: min-content;
+  &__element {
+    flex-grow: 1;
+    flex-basis: 47%;
+    height: min-content;
+  }
+  &__list {
+    margin: 10px;
+    min-width: 350px;
+    border-radius: 10px;
+    background: $second-back-color;
+  }
+  &__list-element {
+    display: flex;
+    width: 100%;
+    &:nth-last-of-type(2) {
+      border-bottom: none;
+    }
+    &_product {
+      border-bottom: rgba($primary-color, 0.5) 2px dashed;
+    }
+    &_sum {
+      background: $primary-color;
+      color: $primary-text-color;
+      border-bottom-left-radius: 10px;
+      border-bottom-right-radius: 10px;
+    }
+  }
+  &__list-element-prop {
+    padding: 0.7em;
+    flex-grow: 1;
+  }
+  &__list-element-title {
+    flex-basis: 60%;
+  }
+  &__list-element-price {
+    flex-basis: 20%;
+  }
+  &__list-element-duration {
+    flex-basis: 20%;
+  }
+  &__form {
+    margin: 10px;
+    min-width: 350px;
+    border-radius: 10px;
+    background: $second-back-color;
+  }
+  &__redirect {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 30px;
+  }
+  &__redirect-title {
+  }
+  &__redirect-button {
+    width: fit-content;
+    padding: 10px;
+    border-radius: 10px;
+    background: $primary-color;
+    color: $primary-text-color;
+    margin-top: 20px;
+  }
+}
+
+.basket-form {
+  background: $second-back-color;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  &__label {
+    font-size: 1.2em;
+    margin-bottom: 10px;
+  }
+  &__field {
+    margin-bottom: 10px;
+    padding: 5px;
+    border-radius: 5px;
+    border: none;
+  }
+  &__description {
+    margin-bottom: 10px;
+    font-size: 1.2em;
+    padding: 5px;
+    border-radius: 5px;
+    border: none;
+    width: 100%;
+    height: 100px;
+    resize: vertical;
+  }
+  &__submit {
+    width: fit-content;
+    align-self: center;
+    padding: 10px;
+    border-radius: 10px;
+    background: $primary-color;
+    color: $primary-text-color;
+    margin-top: 20px;
+  }
+  &__report {
+    align-self: center;
+    text-wrap: normal;
+    word-break: break-all;
+    margin-top: 10px;
   }
 }
 
