eslint fixes, изменение формы авторизации, отказ от модального окна для редактирования и просмотра заказов модератором в пользу раскрывающихся карточек, небольшое изменение базы данных и методов API - добавление поля email в таблицу Orders

--- a/front/src/assets/css/variables.scss
+++ b/front/src/assets/css/variables.scss
@@ -6,6 +6,7 @@ $second-back-color: #ffe5b4;
 $border-color: slategrey;
 $text-color: dimgrey;
 $object-color: gainsboro;
+$info-background: white;
 
 @font-face{
   font-family: "Anonymous_Pro";
