--- a/front/src/assets/css/myStyle.scss
+++ b/front/src/assets/css/myStyle.scss
@@ -7,9 +7,9 @@
 }
 html {
   height: 100%;
+  font-size: 20px;
 }
 body {
-  font-size: 1.2em;
   color: $text-color;
   background: $back-color;
   font-family: "Anonymous_Pro", serif;
@@ -30,26 +30,23 @@ div::-webkit-scrollbar-thumb {
 }
 button {
   font-family: "Anonymous_Pro", serif;
-  font-size: 1.2em;
+  font-size: 1em;
   cursor: pointer;
   border: none;
   background: none;
-  &:focus {
-    outline: 0;
-  }
 }
 input {
-  font-size: 1.2em;
-  &:focus {
-    outline: 0;
-  }
+  border: none;
+  font-size: 1em;
   &[type=submit] {
     cursor: pointer;
     border: none;
   }
 }
 select {
-  font-size: 1.2em;
+  font-size: 1em;
+  border: none;
+  -webkit-appearance: none;
 }
 
 @media only screen and (max-width: 1000px) {
@@ -443,6 +440,7 @@ select {
 
 .auth {
   display: grid;
+  grid-auto-rows: min-content;
   place-items: center;
   &__form {
     margin-top: 30px;
@@ -452,8 +450,29 @@ select {
   }
 }
 
+.auth__switch-button {
+  color: $primary-text-color;
+  background-color: $primary-color;
+  padding: 10px;
+  border-radius: 10px;
+  margin-top: 20px;
+}
+
 .auth-form {
   @include form;
+}
+
+.admin {
+  &__panel {
+    display: grid;
+    grid-template-columns: 1fr repeat(2, max-content);
+    gap: 1em;
+    &-title {
+      font-size: 1.5em;
+    }
+    &-button {
+    }
+  }
 }
 
 .dashboard{
@@ -640,46 +659,61 @@ select {
     width: 100%;
   }
   &__list {
-    padding: 10px;
-    border-radius: 10px;
-    background: $second-back-color;
-    width: 30em;
-  }
-  &__list-element {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    text-align: center;
-  }
-  &__list-element-label {
-    font-size: 1.2em;
-    padding: 0.7em;
-    flex-grow: 1;
-  }
-  &__list-element-prop {
-    padding: 0.7em;
-    flex-grow: 1;
-  }
-  &__list-element-id {
-    width: 15%;
-  }
-  &__list-element-status {
-    width: 50%;
-  }
-  &__list-element-description {
-    width: 35%;
-  }
-  &__list-button {
-    background: $primary-color;
-    color: $primary-text-color;
-    border-radius: 20px;
-    padding: 10px;
-  }
-  &__list-select {
-    margin-bottom: 10px;
-    padding: 5px;
-    border-radius: 5px;
-    border: none;
+    max-width: 90vw;
+    display: grid;
+    grid-gap: 1em;
+    place-items: center;
+    &-element {
+      width: fit-content;
+      background-color: $second-back-color;
+      min-width: 10em;
+      max-width: 95%;
+      border-radius: 0.5em;
+      padding: 0.3em;
+      &-header {
+        display: grid;
+        place-items: center;
+        grid-auto-flow: column;
+        grid-gap: 0.5em;
+      }
+      &-id {
+        font-weight: bold;
+      }
+      &-select {
+        padding: 0.3em;
+        border-radius: 0.5em;
+      }
+      &-open-button {
+        width: 1.5em;
+        height: 1.5em;
+        background-image: url("../svg/down-direction-icon.svg");
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
+      }
+      &-body {
+        background-color: $info-background;
+        border-radius: 0.5em;
+        padding: 0.5em;
+        margin-top: 0.3em;
+        &-prop {
+          word-break: break-all;
+          white-space: normal;
+          line-height: 1.5em;
+        }
+        &-line {
+          margin: 0.3em;
+        }
+        &-list {
+          margin: 0.3em 0.3em 0.3em 1.5em;
+          &-element {
+            word-break: break-all;
+            white-space: normal;
+            line-height: 1.5em;
+          }
+        }
+      }
+    }
   }
 }
 
