Вынесение однотивных функций интерпритаций в плагин, полный переход на новое единое модальное окно, изменение store и логики работы изменения позиции каталога модератором

--- a/front/src/assets/css/variables.scss
+++ b/front/src/assets/css/variables.scss
@@ -7,6 +7,7 @@ $border-color: slategrey;
 $text-color: dimgrey;
 $object-color: gainsboro;
 $info-background: white;
+$modal-color: rgba(255, 255, 255, 0.5);
 
 @font-face{
   font-family: "Anonymous_Pro";
