--- a/front/src/assets/css/myStyle.scss
+++ b/front/src/assets/css/myStyle.scss
@@ -299,6 +299,9 @@ select {
   width: 100%;
   align-items: flex-start;
   height: max-content;
+  &__modal {
+    padding: 0.5em;
+  }
   &__options-container {
     border-top: rgba($primary-color, 0.5) 2px dashed;
     background: $second-back-color;
@@ -464,8 +467,8 @@ select {
 
 .admin {
   &__panel {
-    display: grid;
-    grid-template-columns: 1fr repeat(2, max-content);
+    display: flex;
+    justify-content: space-between;
     gap: 1em;
     &-title {
       font-size: 1.5em;
@@ -512,30 +515,56 @@ select {
   }
 }
 
-.modal-window {
+.modal {
+  z-index: 999;
   position: fixed;
-  width: 100%;
-  height: fit-content;
-  background: rgba($back-color, 0.5);
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   display: grid;
   place-items: center;
-  z-index: 10;
+  background-color: $modal-color;
   &__window {
-    padding: 15px;
-    border-radius: 10px;
-    background: $second-back-color;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    overflow-y: scroll;
-  }
-  &__close-button {
-    width: 20px;
-    height: 20px;
-    min-height: 20px;
-    min-width: 20px;
-    background: url("../svg/cross.svg");
-    align-self: flex-end;
+    max-width: 90vw;
+    background-color: $second-back-color;
+    padding: 0.3em;
+    border-radius: 0.5em;
+    display: grid;
+    place-items: center;
+    grid-gap: 0.5em;
+    grid-template:
+  "title close" auto
+  "content content" auto / max-content auto;
+    &-title {
+      color: $text-color;
+      grid-area: title;
+      text-align: center;
+    }
+    &-close {
+      height: 1em;
+      width: 1em;
+      background-color: $text-color;
+      mask: url("../svg/cross.svg");
+      mask-repeat: no-repeat;
+      mask-size: cover;
+      place-self: center end;
+      grid-area: close;
+    }
+    &-content {
+      max-height: calc(100vh - 7em);
+      overflow-y: scroll;
+      max-width: 90vw;
+      grid-area: content;
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+      display: grid;
+      place-items: center;
+      grid-gap: 0.3em;
+      &::-webkit-scrollbar {
+        display: none;
+      }
+    }
   }
 }
 
@@ -664,10 +693,8 @@ select {
     grid-gap: 1em;
     place-items: center;
     &-element {
-      width: fit-content;
       background-color: $second-back-color;
       min-width: 10em;
-      max-width: 95%;
       border-radius: 0.5em;
       padding: 0.3em;
       &-header {
