--- a/front/src/assets/css/myStyle.scss
+++ b/front/src/assets/css/myStyle.scss
@@ -8,7 +8,22 @@
 html {
   height: 100%;
   font-size: 20px;
-  width: 100vw;
+  max-width: 100vw;
+}
+@media only screen and (max-width: 500px) {
+  body {
+    font-size: 0.7em;
+  }
+}
+@media only screen and (max-width: 1000px) {
+  body {
+    font-size: 0.8em;
+  }
+}
+@media only screen and (min-width: 2000px) {
+  body {
+    font-size: 1.5em;
+  }
 }
 body {
   color: $text-color;
@@ -18,16 +33,16 @@ body {
 }
 div::-webkit-scrollbar {
   width: 1em;
-  border-radius: 5px;
+  border-radius: 0.25em;
 }
 div::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-  border-radius: 5px;
+  -webkit-box-shadow: inset 0 0 0.3em rgba(0,0,0,0.3);
+  border-radius: 0.25em;
 }
 div::-webkit-scrollbar-thumb {
   background-color: $object-color;
   border: 1px solid $border-color;
-  border-radius: 5px;
+  border-radius: 0.25em;
 }
 button {
   font-family: "Anonymous_Pro", serif;
@@ -36,12 +51,72 @@ button {
   border: none;
   background: none;
 }
+textarea {
+  font-size: 1em;
+}
 input {
   border: none;
   font-size: 1em;
   &[type=submit] {
     cursor: pointer;
     border: none;
+  }
+  &[type="checkbox"] {
+    height: 0.7em;
+    width: 0.7em;
+    position: relative;
+    -webkit-appearance: none;
+    &:before {
+      content: "";
+      display: inline-block;
+      position: absolute;
+      height: 0.7em;
+      width: 0.7em;
+      border: 1px solid $text-color;
+      background-color: $info-background;
+    }
+    &:hover {
+      filter: brightness(90%);
+    }
+    &:checked {
+      &:before {
+        content: "";
+        display: inline-block;
+        position: absolute;
+        height: 0.7em;
+        width: 0.7em;
+        border: 1px solid $text-color;
+        background-color: $info-background;
+      }
+      &:after {
+        content: "";
+        display: inline-block;
+        position: absolute;
+        top: 0.2em;
+        left: 0.2em;
+        height: 0.25em;
+        width: 0.5em;
+        border-left: 0.1em solid $text-color;
+        border-bottom: 0.1em solid $text-color;
+        -webkit-transform: translateY(-0.1em) rotate(-45deg);
+        transform: translateY(-0.1em) rotate(-45deg);
+      }
+    }
+  }
+  &[type="range"] {
+    position: relative;
+    -webkit-appearance: none;
+    width: 100%;
+    height: 0.7em;
+    border-radius: 1em;
+    background-color: $info-background;
+    &::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      height: 1em;
+      width: 1em;
+      border-radius: 1em;
+      background-color: $text-color;
+    }
   }
 }
 select {
@@ -50,51 +125,37 @@ select {
   -webkit-appearance: none;
 }
 
-@media only screen and (max-width: 1000px) {
-  body {
-    font-size: 0.8em;
-  }
-}
-
-@media only screen and (min-width: 2000px) {
-  body {
-    font-size: 1.5em;
-  }
-}
-
 @mixin form {
   background: $second-back-color;
-  border-radius: 10px;
+  border-radius: 0.5em;
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  padding: 0.5em;
   &__label {
-    font-size: 1.2em;
-    margin-bottom: 10px;
+    margin-bottom: 0.8em;
   }
   &__label-tip {
-    font-size: 0.7em;
+    font-size: 0.8em;
     font-weight: bold;
   }
   &__field {
-    margin-bottom: 10px;
-    padding: 5px;
-    border-radius: 5px;
+    margin-bottom: 0.5em;
+    padding: 0.25em;
+    border-radius: 0.25em;
     border: none;
     width: 100%;
   }
   &__counter {
-    margin-bottom: 10px;
-    padding: 5px;
-    border-radius: 5px;
+    margin-bottom: 0.5em;
+    padding: 0.25em;
+    border-radius: 0.25em;
     border: none;
     width: 5em;
   }
   &__textarea {
-    margin-bottom: 10px;
-    font-size: 1.2em;
-    padding: 5px;
-    border-radius: 5px;
+    margin-bottom: 0.5em;
+    padding: 0.25em;
+    border-radius: 0.25em;
     border: none;
     width: 100%;
     height: 10em;
@@ -104,30 +165,30 @@ select {
   &__submit {
     width: fit-content;
     align-self: center;
-    padding: 10px;
-    border-radius: 10px;
+    padding: 0.5em;
+    border-radius: 0.5em;
     background: $primary-color;
     color: $primary-text-color;
-    margin-top: 20px;
+    margin-top: 1em;
   }
   &__report {
     align-self: center;
     text-wrap: normal;
     word-break: break-all;
-    margin-top: 10px;
+    margin-top: 0.5em;
   }
   &__drop-down {
-    margin-bottom: 10px;
-    padding: 5px;
-    border-radius: 5px;
+    margin-bottom: 0.5em;
+    padding: 0.25em;
+    border-radius: 0.25em;
     border: none;
   }
   &__title {
     width: 100%;
     text-align: center;
     font-size: 1.5em;
-    margin-bottom: 20px;
-    margin-top: 5px;
+    margin-bottom: 1em;
+    margin-top: 0.25em;
   }
   &__description {
     width: 100%;
@@ -135,13 +196,13 @@ select {
     text-indent: 1.5em;
   }
   &__prop {
-    margin-bottom: 10px;
+    margin-bottom: 0.5em;
   }
   &__list {
 
   }
   &__list-element {
-    margin-bottom: 10px;
+    margin-bottom: 0.5em;
   }
 }
 
@@ -160,7 +221,6 @@ select {
 
 .header {
   width: 100%;
-  padding: 15px;
   background: $primary-color url("../png/primaryBack.png");
   display: flex;
   flex-direction: row;
@@ -172,9 +232,9 @@ select {
     align-items: center;
   }
   &__button {
-    margin: 5px;
+    margin: 0.25em;
     font-style: italic;
-    padding: 5px;
+    padding: 0.25em;
     color: $primary-text-color;
     &:hover {
       color: $primary-text-color-hover
@@ -194,7 +254,7 @@ select {
   &__panel {
     width: 100%;
     background: $second-back-color;
-    padding: 10px 30px;
+    padding: 0.5em 1.5em;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -212,10 +272,10 @@ select {
     flex-direction: row;
     justify-content: space-around;
     flex-wrap: wrap;
-    padding: 5px;
+    padding: 0.25em;
   }
   &__nav-button {
-    padding: 5px;
+    padding: 0.25em;
     text-transform: uppercase;
     &_selected {
       font-weight: bold;
@@ -227,8 +287,8 @@ select {
 .admin {
   &__users {
     width: 100%;
-    padding: 10px;
-    margin: 0 20px;
+    padding: 0.5em;
+    margin: 0 1em;
     overflow: hidden;
   }
 }
@@ -238,15 +298,15 @@ select {
   flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
-  padding: 0 20px;
+  padding: 0 1em;
   &__title {
-    margin-top: 25px;
-    margin-bottom: 10px;
+    margin-top: 1.25em;
+    margin-bottom: 0.5em;
   }
   &__cards {
     overflow-x: scroll;
     background: $second-back-color;
-    border-radius: 10px;
+    border-radius: 0.5em;
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -254,11 +314,11 @@ select {
 }
 
 .user-card {
-  padding: 10px;
-  margin: 10px;
+  padding: 0.5em;
+  margin: 0.5em;
   background: $object-color;
   border: $border-color solid 1px;
-  border-radius: 10px;
+  border-radius: 0.5em;
   display: flex;
   flex-direction: column;
   min-width: 14em;
@@ -270,8 +330,8 @@ select {
     word-break: break-all;
   }
   &__delete-button {
-    height: 20px;
-    width: 20px;
+    height: 1em;
+    width: 1em;
     align-self: flex-end;
     cursor: pointer;
     background: url("../svg/cross.svg");
@@ -302,7 +362,7 @@ select {
   &__options-container {
     border-top: rgba($primary-color, 0.5) 2px dashed;
     background: $second-back-color;
-    padding: 20px;
+    padding: 1em;
     height: 100%;
   }
   &__options {
@@ -313,10 +373,10 @@ select {
     top: 0;
   }
   &__options-subtitle {
-    margin: 10px 0;
+    margin: 0.5em 0;
   }
   &__options-type-filter {
-    margin: 5px 10px;
+    margin: 0 0.5em;
   }
   &__options-type-filter-label {
     width: max-content;
@@ -324,7 +384,7 @@ select {
   }
   &__options-slider {
     width: 100%;
-    margin: 15px;
+    height: 1em;
     text-align: center;
     position: relative;
     & > input[type=range] {
@@ -345,13 +405,13 @@ select {
 
   }
   &__options-reset {
-    margin: 20px 0;
+    margin: 1em 0;
     font-size: 1.2em;
     color: $primary-text-color;
     background: $primary-color;
-    border-radius: 10px;
+    border-radius: 0.5em;
     width: fit-content;
-    padding: 10px;
+    padding: 0.5em;
   }
   &__segments {
     width: 100%;
@@ -361,20 +421,20 @@ select {
     align-items: center;
   }
   &__add-button {
-    margin: 20px 0;
+    margin: 1em 0;
     font-size: 1.5em;
     color: $primary-text-color;
     background: $primary-color;
-    border-radius: 10px;
+    border-radius: 0.5em;
     width: fit-content;
-    padding: 10px;
+    padding: 0.5em;
   }
   &__segment {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    margin: 20px 0;
+    margin: 1em 0;
   }
   &__segment-title {
     text-align: center;
@@ -383,7 +443,7 @@ select {
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
   .catalog {
     flex-direction: column;
     &__options-container {
@@ -393,41 +453,41 @@ select {
 }
 
 .product-card {
-  margin: 15px;
+  margin: 0.75em;
   background: $object-color;
-  border-radius: 15px;
+  border-radius: 0.75em;
   width: 18em;
   &__img {
     object-fit: cover;
-    height: 200px;
+    height: 10em;
     width: 100%;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
+    border-top-left-radius: 0.75em;
+    border-top-right-radius: 0.75em;
   }
   &__info {
-    padding: 10px;
+    padding: 0.5em;
   }
   &__title {
-    margin-bottom: 10px;
+    margin-bottom: 0.5em;
   }
   &__prop {
-    margin-bottom: 5px;
+    margin-bottom: 0.25em;
   }
   &__buttons {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
-    margin-top: 15px;
+    margin-top: 0.75em;
   }
   &__count {
-    margin: 0 5px;
+    margin: 0 0.25em;
   }
   &__button {
     background: $second-back-color;
-    border-radius: 5px;
-    padding: 5px;
-    margin: 0 5px;
+    border-radius: 0.25em;
+    padding: 0.25em;
+    margin: 0 0.25em;
     &_selected {
       background: $primary-color;
       color: $primary-text-color;
@@ -443,19 +503,19 @@ select {
   grid-auto-rows: min-content;
   place-items: center;
   &__form {
-    margin-top: 30px;
+    margin-top: 1.5em;
     width: 100%;
-    max-width: 500px;
-    padding: 10px;
+    max-width: 25em;
+    padding: 0.5em;
   }
 }
 
 .auth__switch-button {
   color: $primary-text-color;
   background-color: $primary-color;
-  padding: 10px;
-  border-radius: 10px;
-  margin-top: 20px;
+  padding: 0.5em;
+  border-radius: 0.5em;
+  margin-top: 1em;
 }
 
 .auth-form {
@@ -481,7 +541,7 @@ select {
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  padding: 20px;
+  padding: 1em;
   &__container {
     width: 500px;
   }
@@ -493,14 +553,6 @@ select {
   }
   &__subtitle {
     text-align: center;
-  }
-}
-
-@media (max-width: 1000px) {
-  .dashboard {
-    &__pie {
-      font-size: 0.8em;
-    }
   }
 }
 
@@ -565,16 +617,6 @@ select {
   }
 }
 
-@media (max-width: 400px) {
-  .modal-window {
-    &__window {
-      height: 100%;
-      width: 100% !important;
-      border-radius: 0 !important;
-    }
-  }
-}
-
 .product-info {
   @include form;
 }
@@ -591,10 +633,10 @@ select {
     flex-direction: row;
     justify-content: space-around;
     flex-wrap: wrap;
-    padding: 5px;
+    padding: 0.25em;
   }
   &__nav-button {
-    padding: 5px;
+    padding: 0.25em;
     text-transform: uppercase;
     &_selected {
       font-weight: bold;
@@ -605,14 +647,14 @@ select {
 
 .main {
   &__image-container {
-    box-shadow: 0px -90px 25px -25px $back-color inset;
+    box-shadow: 0 -4.5em 1.25em -1.25em $back-color inset;
     position: relative;
   }
   &__image {
     object-fit: cover;
     width: 100%;
     max-height: 30em;
-    opacity:0.8;
+    opacity: 0.8;
     background: $back-color;
   }
   &__social-icons {
@@ -627,35 +669,35 @@ select {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    padding: 20px;
+    padding: 1em;
     justify-content: center;
   }
   &__container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 20px;
-    border-radius: 15px;
+    margin: 1em;
+    border-radius: 0.75em;
     background: $second-back-color;
-    width: 400px;
+    width: 20em;
   }
   &__subtitle {
     font-size: 1.5em;
     width: 100%;
     text-align: center;
     white-space: nowrap;
-    padding: 10px;
+    padding: 0.5em;
     border-bottom: rgba($primary-color, 0.5) 2px dashed;
   }
   &__container-content {
-    padding: 15px;
+    padding: 0.75em;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
   }
   &__container-line {
-    margin-bottom: 10px;
+    margin-bottom: 0.5em;
     &_selected {
       font-weight: bolder;
     }
@@ -663,9 +705,9 @@ select {
   &__container-button {
     background: $primary-color;
     color: $primary-text-color;
-    padding: 10px;
-    border-radius: 10px;
-    margin: 20px;
+    padding: 0.5em;
+    border-radius: 0.5em;
+    margin: 1em;
   }
 }
 
@@ -674,7 +716,7 @@ select {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 20px;
+  padding: 1em;
   &__search-form {
     width: fit-content;
     display: flex;
@@ -682,18 +724,18 @@ select {
     align-items: center;
     justify-content: center;
     background: $second-back-color;
-    padding: 10px;
-    border-radius: 15px;
-    margin-bottom: 20px;
+    padding: 0.5em;
+    border-radius: 0.75em;
+    margin-bottom: 1em;
   }
   &__search-form-label {
     font-size: 1.2em;
-    margin-bottom: 10px;
+    margin-bottom: 0.3em;
   }
   &__search-form-field {
-    margin-bottom: 10px;
-    padding: 5px;
-    border-radius: 5px;
+    margin-bottom: 0.5em;
+    padding: 0.3em;
+    border-radius: 0.3em;
     border: none;
     width: 100%;
   }
@@ -713,10 +755,11 @@ select {
         grid-auto-flow: column;
         grid-gap: 0.5em;
       }
-      &-id {
+      &-prop {
         font-weight: bold;
       }
       &-select {
+        background-color: $info-background;
         padding: 0.3em;
         border-radius: 0.5em;
       }
@@ -754,26 +797,10 @@ select {
   }
 }
 
-@media (max-width: 400px) {
-  .orders {
-    &__list {
-      width: 100%;
-    }
-    &__list-element-status {
-      display: none;
-    }
-  }
-}
-
-.order-info {
-  @include form;
-  width: 25em;
-}
-
 .basket {
   display: flex;
   flex-direction: row;
-  padding: 15px;
+  padding: 0.75em;
   justify-content: center;
   flex-wrap: wrap;
   height: min-content;
@@ -783,8 +810,8 @@ select {
     height: min-content;
   }
   &__list {
-    margin: 10px;
-    border-radius: 10px;
+    margin: 0.5em;
+    border-radius: 0.5em;
     background: $second-back-color;
   }
   &__list-element {
@@ -799,8 +826,8 @@ select {
     &_sum {
       background: $primary-color;
       color: $primary-text-color;
-      border-bottom-left-radius: 10px;
-      border-bottom-right-radius: 10px;
+      border-bottom-left-radius: 0.5em;
+      border-bottom-right-radius: 0.5em;
     }
   }
   &__list-element-prop {
@@ -817,25 +844,25 @@ select {
     flex-basis: 30%;
   }
   &__form {
-    margin: 10px;
-    border-radius: 10px;
+    margin: 0.5em;
+    border-radius: 0.5em;
     background: $second-back-color;
   }
   &__redirect {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 30px;
+    margin-top: 1.5em;
   }
   &__redirect-title {
   }
   &__redirect-button {
     width: fit-content;
-    padding: 10px;
-    border-radius: 10px;
+    padding: 0.5em;
+    border-radius: 0.5em;
     background: $primary-color;
     color: $primary-text-color;
-    margin-top: 20px;
+    margin-top: 1em;
   }
 }
 
@@ -844,14 +871,14 @@ select {
 }
 
 .order-success {
-  padding: 20px;
+  padding: 1em;
   &__title {
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 1em;
   }
   &__message {
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 0.5em;
     &_selected {
       font-weight: bold;
     }
@@ -913,7 +940,7 @@ select {
 
 .footer {
   flex-shrink: 0;
-  padding: 10px;
+  padding: 0.5em;
   background: $primary-color;
   &__social_icons {
     grid-template-columns: repeat(4, 1fr);
